// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-Button"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <button
    className="ant-btn"
    id="Button"
    onClick={[Function]}
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`Disabled Col 1`] = `
<div
  className="{}"
  id="bl-Disabled Col"
>
  <input
    blockId="Disabled Col"
    className="ant-input"
    makeCss={
      [MockFunction] {
        "calls": Array [
          Array [
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": "{}",
          },
        ],
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Input 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-Input"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <input
    blockId="Input"
    className="ant-input"
    makeCss={
      [MockFunction] {
        "calls": Array [
          Array [
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": "{}",
          },
        ],
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Input 2`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
  id="bl-Input"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <input
    blockId="Input"
    className="ant-input"
    makeCss={
      [MockFunction] {
        "calls": Array [
          Array [
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": "{}",
          },
        ],
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Paragraph span: 12 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
  id="bl-Paragraph span: 12"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="Paragraph span: 12"
  >
    Loem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</div>
`;

exports[`Paragraph style 1`] = `
<div
  className="ant-col {\\"style\\":{\\"background\\":\\"white\\",\\"borderRadius\\":20}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-Paragraph style"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="Paragraph style"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</div>
`;
